tests/tests/checks/snapshots/analysis/ts/property-assignments/main@bracket-equals.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/ts/property-assignments/bracket-equals
---
[
  {
    "loc": "00002:14-20",
    "source": 1,
    "syntax": "def,field",
    "pretty": "field bracketEquals::prop",
    "sym": "S_js_ts/src/property-assignments/brackets-equals.js/bracketEquals.prop.",
    "type": "\"prop\""
  },
  {
    "loc": "00002:14-20",
    "structured": 1,
    "pretty": "bracketEquals::prop",
    "sym": "S_js_ts/src/property-assignments/brackets-equals.js/bracketEquals.prop.",
    "js_sym": "#prop",
    "type_pretty": "\"prop\"",
    "kind": "field",
    "subsystem": null,
    "implKind": "impl",
    "sizeBytes": null,
    "alignmentBytes": null,
    "ownVFPtrBytes": null,
    "bindingSlots": [],
    "ontologySlots": [],
    "supers": [],
    "methods": [],
    "fields": [],
    "overrides": [],
    "props": [],
    "variants": []
  },
  {
    "loc": "00002:14-20",
    "target": 1,
    "kind": "def",
    "pretty": "bracketEquals::prop",
    "sym": "S_js_ts/src/property-assignments/brackets-equals.js/bracketEquals.prop."
  },
  {
    "loc": "00003:14-18",
    "source": 1,
    "syntax": "use,field",
    "pretty": "field bracketEquals::prop",
    "sym": "S_js_ts/src/property-assignments/brackets-equals.js/bracketEquals.prop.",
    "type": "\"prop\""
  },
  {
    "loc": "00003:14-18",
    "target": 1,
    "kind": "use",
    "pretty": "bracketEquals::prop",
    "sym": "S_js_ts/src/property-assignments/brackets-equals.js/bracketEquals.prop."
  },
  {
    "loc": "00004:14-20",
    "source": 1,
    "syntax": "use,field",
    "pretty": "field bracketEquals::prop",
    "sym": "S_js_ts/src/property-assignments/brackets-equals.js/bracketEquals.prop.",
    "type": "\"prop\""
  },
  {
    "loc": "00004:14-20",
    "target": 1,
    "kind": "use",
    "pretty": "bracketEquals::prop",
    "sym": "S_js_ts/src/property-assignments/brackets-equals.js/bracketEquals.prop."
  }
]
